Migrate master bugfix (#7927)